--- a/_posts/2025-09-17-vyshnav.markdown
+++ b/_posts/2025-09-17-vyshnav.markdown
@@ -4,7 +4,7 @@ title: delving into kicad
 date: 2025-09-17 15:01:35 +0300
 image: vyshnav/vyshnavkicad.png
 tags: Home Kicad
-author: vyshnav
+author: Vyshnav
 ---
 
 ## Some Title
