--- a/_posts/201-07-05-Danish2.markdown
+++ b/_posts/201-07-05-Danish2.markdown
@@ -2,11 +2,11 @@
 layout: post
 title:  Moving to a new place
 date:   2025-07-05 15:01:35 +0300
-image:  Danish\my.jpg
+image:  R.jpg
 tags:   Home,kicad
 ---
 Yeah, and if you were the pope they'd be all, "Straighten your pope hat." And "Put on your good vestments." Noooooo! Perhaps, but perhaps your civilization is merely the sewer of an even greater society above you!
-![]({{ site.baseurl }}/images/Danish/my.jpg)
+![]({{ site.baseurl }}/images/Danish/R.jpg)
 *Minimalism*
 
 
